# rustchat

./: Cargo.toml  README.md
.metals/: metals.mv.db
src/: main.rs
src/coding/: decoder.rs  encoder.rs  mod.rs  varint.rs
src/database/: repository.rs
src/networking/: error.rs  message_payload.rs  mod.rs  packet.rs  packet_type.rs  raw_packet.rs
src/server/: channel.rs  connection.rs  database.rs  framed_websocket.rs  mod.rs  server.rs  user.rs
src/types/: mod.rs  types.rs
tester/: index.html  main.dart  main.py
