[package]
name = "rustchat"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5.0"
futures = "0.3.30"
snafu = "0.7.5"
tokio-stream = "0.1.15"
tokio-tungstenite = "0.26.1"

[dependencies.tokio-util]
version = "0.7.11"
features = ["codec"]

[dependencies.uuid]
version = "1.4.1"
features = ["v4", "fast-rng", "macro-diagnostics"]

[dependencies.tokio]
version = "1.33.0"
features = ["full"]
